industrial_unit_registrations